Clarify it's the service name keys

--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -344,7 +344,7 @@ paths:
                 $ref: '#/components/schemas/Service'
           description: Created
         "400":
-          description: Service names must be one of 'en' (English) or 'cy' (Welsh)
+          description: Service name keys must be one of 'en' (English) or 'cy' (Welsh)
         "409":
           description: Gateway account IDs provided has already been assigned to another
             service
