--- a/src/test/resources/config/test-it-config.yaml
+++ b/src/test/resources/config/test-it-config.yaml
@@ -111,7 +111,7 @@ secondFactorAuthentication:
 
 sqs:
   nonStandardServiceEndpoint: ${AWS_SQS_NON_STANDARD_SERVICE_ENDPOINT:-true}
-  endpoint: ${AWS_SQS_ENDPOINT:-localhost}
+  endpoint: ${AWS_SQS_ENDPOINT:-http://localhost}
   region: ${AWS_SQS_REGION:-region-1}
   secretKey: ${AWS_SECRET_KEY:-x}
   accessKey: ${AWS_ACCESS_KEY:-x}
