--- a/openapi/adminusers_spec.yaml
+++ b/openapi/adminusers_spec.yaml
@@ -1188,6 +1188,7 @@ components:
       properties:
         email:
           type: string
+          format: email
           example: example@example.gov.uk
           minLength: 1
         role_name:
@@ -1219,6 +1220,7 @@ components:
       properties:
         email:
           type: string
+          format: email
           example: example@example.gov.uk
           minLength: 1
       required:
